[project]
name = "aph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fpdf>=1.7.2",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.16",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "openai>=1.78.0",
    "qdrant-client>=1.14.2",
    "streamlit>=1.45.0",
    "uvicorn>=0.34.2",
]
